--- a/src/main/java/com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form
@@ -20,6 +20,8 @@
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
+    <rowspec value="top:3dlu:noGrow"/>
+    <rowspec value="center:max(d;4px):noGrow"/>
     <colspec value="fill:d:noGrow"/>
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:d:grow"/>
@@ -31,10 +33,14 @@
     <colspec value="fill:max(d;4px):noGrow"/>
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:max(d;4px):noGrow"/>
+    <colspec value="left:4dlu:noGrow"/>
+    <colspec value="fill:max(d;4px):noGrow"/>
     <constraints>
-      <xy x="20" y="20" width="624" height="288"/>
+      <xy x="20" y="20" width="624" height="350"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="511" height="350"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="c5798" class="javax.swing.JLabel">
@@ -166,15 +172,6 @@
           <text value="Last Valid"/>
         </properties>
       </component>
-      <component id="2d83" class="javax.swing.JLabel" binding="firstValidLastValidLabel">
-        <constraints>
-          <grid row="18" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <forms/>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="c2a8a" class="javax.swing.JLabel" binding="flatFeeHelpLabel">
         <constraints>
           <grid row="12" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -244,6 +241,51 @@
           </component>
         </children>
       </grid>
+      <component id="12c28" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="20" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties>
+          <text value="Rekey To"/>
+        </properties>
+      </component>
+      <component id="91048" class="javax.swing.JTextField" binding="rekeyToTf">
+        <constraints>
+          <grid row="20" column="2" row-span="1" col-span="8" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+          <forms defaultalign-horz="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="c8f0d" class="javax.swing.JButton" binding="rekeyAccountChooser">
+        <constraints>
+          <grid row="20" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties>
+          <text value="..."/>
+        </properties>
+      </component>
+      <component id="266b7" class="javax.swing.JButton" binding="rekeyMultiSigAccountChooser">
+        <constraints>
+          <grid row="20" column="12" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties>
+          <text value="Multi-Sig"/>
+        </properties>
+      </component>
+      <component id="2d83" class="javax.swing.JLabel" binding="firstValidLastValidLabel">
+        <constraints>
+          <grid row="18" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties>
+          <text value="--"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
